--- a/Section-1/Assets/style.css
+++ b/Section-1/Assets/style.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    
 }
 main{
 display: flex;
@@ -10,6 +11,8 @@ flex-direction: column;
 }
 
 .data{
+    padding-top: 50px;
+    gap: 20px;
     display: flex;
     flex-direction: column;
 }
